Add /cities/summary/latest endpoint (#432)
Adds a new endpoint to return the latest summary associated with each
city.

Drive-by:
- Regenerates the `bnaclient`.
- Clamps the `/cities/top` endpoint to restrict the number of cities
  returned between 1 and 100.
